--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <scm>
+    <url>https://github.com/folio-org/folio-java-checkstyle.git</url>
+    <connection>scm:git:git://github.com/folio-org/folio-java-checkstyle.git</connection>
+    <developerConnection>scm:git:git@github.com:folio-org/folio-java-checkstyle.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 </project>
