--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <name>folio-java-checkstyle</name>
-  <artifactId>folio-java-checkstyle</artifactId>
-  <groupId>org.folio</groupId>
-  <description>Folio checkstyle configuration</description>
-  <version>1.0.0</version>
+    <name>folio-java-checkstyle</name>
+    <artifactId>folio-java-checkstyle</artifactId>
+    <groupId>org.folio</groupId>
+    <description>Folio checkstyle configuration</description>
+    <version>1.0.0</version>
 
-   <licenses>
-    <license>
-      <name>Apache License 2.0</name>
-      <url>https://spdx.org/licenses/Apache-2.0</url>
-    </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>https://spdx.org/licenses/Apache-2.0</url>
+        </license>
+    </licenses>
 
-  <distributionManagement>
-    <repository>
-      <id>folio-nexus</id>
-      <name>FOLIO Release Repository</name>
-      <url>https://repository.folio.org/repository/maven-releases/</url>
-      <uniqueVersion>false</uniqueVersion>
-      <layout>default</layout>
-    </repository>
-    <snapshotRepository>
-      <id>folio-nexus</id>
-      <name>FOLIO Snapshot Repository</name>
-      <uniqueVersion>true</uniqueVersion>
-      <url>https://repository.folio.org/repository/maven-snapshots/</url>
-      <layout>default</layout>
-    </snapshotRepository>
-  </distributionManagement>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <distributionManagement>
+        <repository>
+            <id>folio-nexus</id>
+            <name>FOLIO Release Repository</name>
+            <url>https://repository.folio.org/repository/maven-releases/</url>
+            <uniqueVersion>false</uniqueVersion>
+            <layout>default</layout>
+        </repository>
+        <snapshotRepository>
+            <id>folio-nexus</id>
+            <name>FOLIO Snapshot Repository</name>
+            <uniqueVersion>true</uniqueVersion>
+            <url>https://repository.folio.org/repository/maven-snapshots/</url>
+            <layout>default</layout>
+        </snapshotRepository>
+    </distributionManagement>
 
-  <scm>
-    <url>https://github.com/folio-org/folio-java-checkstyle.git</url>
-    <connection>scm:git:git://github.com/folio-org/folio-java-checkstyle.git</connection>
-    <developerConnection>scm:git:git@github.com:folio-org/folio-java-checkstyle.git</developerConnection>
-    <tag>folio-java-checkstyle-1.0.0</tag>
-  </scm>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
+                <configuration>
+                    <preparationGoals>clean verify</preparationGoals>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <pushChanges>false</pushChanges>
+                    <localCheckout>true</localCheckout>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <scm>
+        <url>https://github.com/folio-org/folio-java-checkstyle.git</url>
+        <connection>scm:git:git://github.com/folio-org/folio-java-checkstyle.git</connection>
+        <developerConnection>scm:git:git@github.com:folio-org/folio-java-checkstyle.git</developerConnection>
+        <tag>folio-java-checkstyle-1.0.0</tag>
+    </scm>
 </project>
