--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>folio-java-checkstyle</artifactId>
     <groupId>org.folio</groupId>
     <description>Folio checkstyle configuration</description>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <licenses>
         <license>
