--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>folio-java-checkstyle</name>
     <artifactId>folio-java-checkstyle</artifactId>
     <groupId>org.folio</groupId>
     <description>Folio checkstyle configuration</description>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <licenses>
         <license>
@@ -58,6 +57,6 @@
         <url>https://github.com/folio-org/folio-java-checkstyle.git</url>
         <connection>scm:git:git://github.com/folio-org/folio-java-checkstyle.git</connection>
         <developerConnection>scm:git:git@github.com:folio-org/folio-java-checkstyle.git</developerConnection>
-        <tag>folio-java-checkstyle-1.0.0</tag>
+        <tag>v1.0.1</tag>
     </scm>
 </project>
