--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+	    <java.version>17</java.version>
+	    <maven.compiler.source>17</maven.compiler.source>
+	    <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <build>
