[maven-release-plugin] prepare release v1.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>folio-java-checkstyle</artifactId>
     <groupId>org.folio</groupId>
     <description>Folio checkstyle configuration</description>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <licenses>
         <license>
@@ -60,6 +60,6 @@
         <url>https://github.com/folio-org/folio-java-checkstyle.git</url>
         <connection>scm:git:git://github.com/folio-org/folio-java-checkstyle.git</connection>
         <developerConnection>scm:git:git@github.com:folio-org/folio-java-checkstyle.git</developerConnection>
-        <tag>folio-java-checkstyle-1.0.0</tag>
+        <tag>v1.1.0</tag>
     </scm>
 </project>
